--- a/ecommerce-microservices/buyer-service/pom.xml
+++ b/ecommerce-microservices/buyer-service/pom.xml
@@ -35,6 +35,15 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>${spring.boot.version}</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <release>17</release>
+          <parameters>true</parameters>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
