--- a/ecommerce-microservices/seller-service/src/main/resources/application.properties
+++ b/ecommerce-microservices/seller-service/src/main/resources/application.properties
@@ -2,11 +2,12 @@
 server.port=4001
 spring.main.banner-mode=off
 
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/appdb}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:appuser}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:apppass}
+spring.datasource.url=jdbc:postgresql://localhost:5432/paypilot
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-spring.jpa.properties.hibernate.default_schema=seller
+spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
+
