fix(buyer): ensure buyer schema exists on startup; update price history UI and login form

--- a/ecommerce-microservices/buyer-service/src/main/resources/application.properties
+++ b/ecommerce-microservices/buyer-service/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
+
+# Ensure SQL init runs on startup to create schemas when using Postgres
+spring.sql.init.mode=always
+spring.sql.init.encoding=UTF-8
